install/scripts/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
    - protocol: TCP
      port: 3030
      targetPort: 3030

---

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
    - protocol: TCP
      port: 4030
      targetPort: 4030

# Repeat the above structure for other services
